@@ -155,3 +155,4 @@ batch_create=1
 ldap_mail=0
 init_template=0
 initsub_template=1
+defmongrelslimit=4
