@@ -1,0 +1,11 @@
+<header>Default limit on number of Mongrel instances</header>
+
+When installing Ruby on Rails scripts, the server administrator can select
+how my Mongrel server processes to start to handle requests to the script's
+path - if the Apache <tt>mod_proxy_balancer</tt> module is installed. To
+prevent an excessive number of Mongrel server processes from overloading the
+system, this option can be used to set the default limit on the number that
+domain administrators are allowed to configure from within Virtualmin. <p>
+
+<footer>
+
