@@ -1877,6 +1877,8 @@ limits_erealdomslimit=Missing or invalid maximum number of non-alias servers
 limits_nodbname=Can choose database names?
 limits_norename=Can rename domains?
 limits_forceunder=Allow sub-servers not under this domain?
+limits_mongrels=Maximum Mongrel server processes for Rails
+limits_emongrels=Missing or invalid number of Mongrel server processes - must be at least 1
 limits_demo=Limit to read-only demo mode?
 limits_modules=Extra Webmin modules
 limits_etable=Allowed functions for servers
@@ -2181,12 +2183,14 @@ tmpl_dbslimit=Default limit on number of databases
 tmpl_domslimit=Default limit on number of virtual servers
 tmpl_aliasdomslimit=Default limit on number of alias servers
 tmpl_bwlimit=Default bandwidth limit
+tmpl_mongrelslimit=Default limit on number of Mongrel instances
 tmpl_emailboxlimit=Missing or invalid default limit on number of mailboxes
 tmpl_ealiaslimit=Missing or invalid default limit on number of aliases
 tmpl_edbslimit=Missing or invalid default limit on number of databases
 tmpl_edomslimit=Missing or invalid default limit on number of virtual servers
 tmpl_ealiasdomslimit=Missing or invalid default limit on number of alias servers
 tmpl_ebwlimit=Missing or invalid default limit on bandwidth
+tmpl_emongrelslimit=Missing or invalid limit on number of Mongrel instances
 tmpl_mysql_mkdb=Create database as well as login?
 tmpl_webalizer=Template Webalizer configuration
 tmpl_webalizersel=Selected file
@@ -2679,6 +2683,7 @@ scripts_eperlsoftware=.. Virtualmin cannot work which software package contains 
 scripts_perlmod=Installing Perl module $1 from CPAN ..
 scripts_eperlmod=.. CPAN failed! See the error message above for details
 scripts_installgem=Installing Ruby Gems package ..
+scripts_mmax=(At most $1)
 
 newnotify_title=Email Server Owners
 newnotify_desc=This page can be used to send email to the owners of the selected virtual servers, for example to announce system down-time, upgrades or other service alterations. The following substitions can be used in the message body and subject:
