@@ -743,3 +743,4 @@ Added the CA Certificate tab to the Manage SSL Certificate page, for uploading a
 If the create of the Unix user or group for a virtual server fails, both are rolled back to avoid leaving half-created users in /etc/passwd or LDAP.
 Virtualmin plugins and modules that are not installed but could be are now in the right-hand frame, with a link to the Package Updates module to install them.
 Updated the proxy paths page to allow proxying paths to a single URL, even on systems that don't have mod_proxy_balancer installed. For those with a module, the proxy can still be to multiple URLs.
+Changed default PHPlist version to stable release 2.10.5.
